--- a/notebooks/iaml01cw2_q2.ipynb
+++ b/notebooks/iaml01cw2_q2.ipynb
@@ -88,21 +88,21 @@
     "    \n",
     "    #---------------------(COMMENT OUT WHEN COMPLETED ONCE!)---------------------#\n",
     "    # Classification experiment with multinomial logistic regression\n",
-    "    #model_2_1 = LogisticRegression().fit(Xtrn_nm, Ytrn) # Uncomment to retrain\n",
+    "    model_2_1 = LogisticRegression().fit(Xtrn_nm, Ytrn) # Uncomment to retrain\n",
     "    # Save the model to disk \n",
-    "    #pickle.dump(model_2_1, open('model_2_1.sav', 'wb')) # Uncomment to resave\n",
+    "    pickle.dump(model_2_1, open('model_2_1.sav', 'wb')) # Uncomment to resave\n",
     "    #----------------------------------------------------------------------------#\n",
     "    \n",
     "    # Load the model from disk\n",
     "    model_2_1 = pickle.load(open('model_2_1.sav', 'rb'))\n",
     "    \n",
     "    # Accuracy score and confusion matrix\n",
-    "    #acc_score = model_2_1.score(Xtst_nm, Ytst)\n",
-    "    #Ypred = model_2_1.predict(Xtst_nm)\n",
-    "    #cm = confusion_matrix(Ytst, Ypred)\n",
+    "    acc_score = model_2_1.score(Xtst_nm, Ytst)\n",
+    "    Ypred = model_2_1.predict(Xtst_nm)\n",
+    "    cm = confusion_matrix(Ytst, Ypred)\n",
     "    \n",
-    "    #print(acc_score)\n",
-    "    #print(cm)\n",
+    "    print(acc_score)\n",
+    "    print(cm)\n",
     "    \n",
     "    return model_2_1\n",
     "\n",
@@ -135,21 +135,21 @@
     "    \n",
     "    #---------------------(COMMENT OUT WHEN COMPLETED ONCE!)---------------------#\n",
     "    # Classification experiment with multinomial logistic regression\n",
-    "    #model_2_2 = SVC().fit(Xtrn_nm, Ytrn) # Uncomment to retrain\n",
+    "    model_2_2 = SVC().fit(Xtrn_nm, Ytrn) # Uncomment to retrain\n",
     "    # Save the model to disk \n",
-    "    #pickle.dump(model_2_2, open('model_2_2.sav', 'wb')) # Uncomment to resave\n",
+    "    pickle.dump(model_2_2, open('model_2_2.sav', 'wb')) # Uncomment to resave\n",
     "    #----------------------------------------------------------------------------#\n",
     "    \n",
     "    # Load the model from disk\n",
     "    model_2_2 = pickle.load(open('model_2_2.sav', 'rb'))\n",
     "    \n",
     "    # Accuracy score and confusion matrix\n",
-    "#     acc_score = model_2_2.score(Xtst_nm, Ytst)\n",
-    "#     Ypred = model_2_2.predict(Xtst_nm)\n",
-    "#     cm = confusion_matrix(Ytst, Ypred)\n",
+    "    acc_score = model_2_2.score(Xtst_nm, Ytst)\n",
+    "    Ypred = model_2_2.predict(Xtst_nm)\n",
+    "    cm = confusion_matrix(Ytst, Ypred)\n",
     "    \n",
-    "#     print(acc_score)\n",
-    "#     print(cm)\n",
+    "    print(acc_score)\n",
+    "    print(cm)\n",
     "    \n",
     "    return model_2_2\n",
     "    \n",
