--- a/notebooks/iaml01cw2_q3.ipynb
+++ b/notebooks/iaml01cw2_q3.ipynb
@@ -289,7 +289,7 @@
     "\n",
     "    plt.show()\n",
     "    \n",
-    "    # Comapre linkage\n",
+    "    # Compare linkage\n",
     "    corr1 = np.corrcoef(hierarchy.cophenet(Z0),hierarchy.cophenet(Z1))\n",
     "    corr2 = np.corrcoef(hierarchy.cophenet(Z1),hierarchy.cophenet(Z2))\n",
     "    corr3 = np.corrcoef(hierarchy.cophenet(Z2),hierarchy.cophenet(Z0))\n",
